--- a/views/manage-stock.ejs
+++ b/views/manage-stock.ejs
@@ -82,7 +82,7 @@
               </tr>
               <% })}%>
             </table>
-            <form class="hidden tab-content" id="form" action='/pharmacist/stocks' method="post">
+            <form class="hidden tab-content" id="form" action='/manager/stocks' method="post">
               <input
                 type="number"
                 name="stockId"
