Implemented printing of the bill

--- a/views/cashier.ejs
+++ b/views/cashier.ejs
@@ -39,7 +39,7 @@
     <aside>
       <ul class="aside-list">
         <li class="list-item"><a href="#">Dashboard</a></li>
-        <li class="list-item"><a href="/cashier/payment">Process payment</a></li>
+        <li class="list-item"><a href="/cashier/bills">View bills</a></li>
         <li class="list-item"><a href="/logout">Logout</a></li>
       </ul>
     </aside>
@@ -54,14 +54,14 @@
           />
           <span>Dashboard</span>
         </a>
-        <a href="/cashier/payment" class="dashboard-module">
+        <a href="/cashier/bills" class="dashboard-module">
           <img
-            src="./assets/logos/payment.png"
+            src="./assets/logos/bill.png"
             width="75"
             height="75"
             alt="edit"
           />
-          <span>Process Payment</span>
+          <span>View bills</span>
         </a>
       </div>
     </main>
